premises intial draft

--- a/website/04-About-us/Staff/Headquarters/10-premises.html
+++ b/website/04-About-us/Staff/Headquarters/10-premises.html
@@ -1,7 +1,7 @@
 <p class="subtitle_page_programme">Premises, IT and Web Marketing Department</p>
 <p class="margin_bottom_20">We ensure that the Global Campus headquarters, located in the Monastery of San Nicolò, is fully functioning in terms of safety compliance, routine maintenance, IT services, compliance with privacy provisions, inventory management and provision of reception and protocol services. We support the Secretary General in liaising with the City of Venice which provides the premises. We are also responsible for web development and web advertising for all HQ and global activities.</p>
 <div class="table_accordion">
-    <<div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Luca_Fantinel_global_campus_eiuc.jpg" alt="Luca Fantinel - Global Campus">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Luca_Fantinel_global_campus_eiuc.jpg" alt="Luca Fantinel - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Finance Manager</p>
             <p class="subtitle_page_programme margin_bottom_20">Luca Fantinel</p>
@@ -45,15 +45,15 @@
             </div>
         </div>
     </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Cristina_Moras_global_campus_eiuc.jpg" alt="Cristina Moras - Global Campus">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Weronika_Grelow_global_campus.png" alt="Weronika Grelow - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Receptionist</p>
-            <p class="subtitle_page_programme margin_bottom_20">Cristina Moras</p>
-            <p class="margin_bottom_20">Cristina joined the Global Campus as receptionist in 2016. She  is responsible for welcoming and assisting staff members, professors, students, guests and invitees in events and activities that take place at the HQ throughout the year.</p>
+            <p class="subtitle_page_programme margin_bottom_20">Weronika Grelow</p>
+            <p class="margin_bottom_20">Dr Weronika Grelow is responsible for reception services and general administrative tasks. She assists the Premises and Technical Services Manager in managing the GC Headquarters premises and supports the staff in organising meetings and events.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">She also supports the preparation of the folders, technical equipment, rooms, catering and cleaning services. Cristina is responsible for protocoling incoming/outgoing mail and faxes, updating databases and archiving EMA publications and documentation.</p>
-                <p class="margin_bottom_20">She studied Romanesque modern languages and literature at the University of Padua. She lived in Portugal and worked as language assistant in Romania.</p>
-                <p>Email: <a class="titolo_gc_europe" href="mailto:info@gchumanrights.org">info@gchumanrights.org</a>/<a class="titolo_gc_europe" href="mailto:cristina.moras@gchumanrights.org">cristina.moras@gchumanrights.org</a></p>
+                <p class="margin_bottom_20">Weronika joined the Global Campus team after several years of fieldwork in refugee camps in Italy, Turkey and Lebanon. Her previous work experience includes research and project assistance to the UNDP Regional Bureau for Europe and the CIS in Istanbul, the European Agency for Fundamental Rights in Vienna, UNMIK, OSCE Anti-trafficking Unit and the Venice Biennale.</p>
+                <p class="margin_bottom_20">Weronika holds a Ph.D. in Transcultural Studies on Eurasia and North Africa from the University of Ca' Foscari in Venice, an M.A. in International Protection of Human Rights from the University of Rome “La Sapienza” and a Master's Degree in Oriental Studies from the University of Warsaw.</p>
+                <p>Email: <a class="titolo_gc_europe" href="mailto:info@gchumanrights.org">info@gchumanrights.org</a>/<a class="titolo_gc_europe" href="mailto:weronika.grelow@gchumanrights.org">weronika.grelow@gchumanrights.org</a></p>
                 <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 911">+39 041 2720 911</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
@@ -93,12 +93,11 @@
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Web Marketing and IT Officer</p>
             <p class="subtitle_page_programme margin_bottom_20">Nicola Tonon</p>
-            <p class="margin_bottom_20">As Information Technology Officer, Nicola Tonon is leading EIUC’s central IT system since 2011. As ITO, he is in charge of making sure that all IT strategic initiatives are in line with the EIUC’s mission, culture, and long-term goals.</p>
+            <p class="margin_bottom_20">As Information Technology Officer (ITO), Nicola has led the GC’s central IT system since 2011. He makes sure that all IT initiatives are in line with the organisation’s mission, culture and long-term goals. </p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">The ITO is responsible for IT-related issues ranging from policy and resource allocation to protocol and organisation.</p>
-                <p class="margin_bottom_20">Nicola has a deep understanding of the importance technology plays in research and related activities and is committed to finding new ways to support staff and students and endeavours through the use of technology. He works closely with students and staff to deliver programmes and services that enhance teaching, research, and student activities.</p>
-                <p class="margin_bottom_20">As Web Marketing Officer, he is in charge of planning digital marketing campaigns including web, SEO/SEM, direct emails, social media and display advertising. On a daily basis he measures and report performance of all digital marketing campaigns and assess against goals. Nicola has is naturally led to identify trends and insights, and optimise spend and performance based on the insights. In his work he utilises strong analytical ability to evaluate end-to-end customer experience across multiple channels and customer touch points, design, create, and edit landing pages that optimise the user experience and user funnels.</p>
-                <p class="margin_bottom_20">He studied mechanical engineering (MA) in Trieste and previously worked at Network Solutions as ITO and he's still actively <a href="https://github.com/bicet">developing many open sources app</a>.</p>
+                <p class="margin_bottom_20">Nicola has a deep understanding of the importance of the role that technology plays in teaching and research activities and is committed to finding new ways to support and enhance the activities of faculty, staff and students. </p>
+                <p class="margin_bottom_20">As Web Marketing Officer, Nicola is in charge of planning, monitoring and reporting on digital marketing campaigns including web, SEO/SEM, direct emails, social media and display advertising. His strong analytical skills allow him to evaluate end-to-end customer experience across multiple channels. He is naturally led to identify trends, thus optimising insights-based performance.</p>
+                <p class="margin_bottom_20">Nicola studied mechanical engineering (MA) in Trieste and previously worked at Network Solutions as ITO. He is actively developing many open source apps (<a class="titolo_gc_europe" href="https://github.com/Bicet">https://github.com/Bicet</a>).</p>
                 <p>Email: <a class="titolo_gc_europe" href="mailto:nicola.tonon@gchumanrights.org">nicola.tonon@gchumanrights.org</a><br> Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 923">+39 041 2720 923</a></p>
             </div>
             <div class="accordion accordion_gc_south_europe read_more">
