--- a/website/04-About-us/Staff/Headquarters/11-gceuroope.html
+++ b/website/04-About-us/Staff/Headquarters/11-gceuroope.html
@@ -3,7 +3,7 @@
 <div class="table_accordion">
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ema/wiebke-lamer-eiuc-global-campus.jpg" alt="Dr. Wiebke Lamer - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe"><span class="maiuscoletto">EMA</span> Programme Direcotr</p>
+            <p class="ruolo_persona titolo_gc_europe"><span class="maiuscoletto">EMA</span> Programme Director</p>
             <p class="subtitle_page_programme margin_bottom_20">Dr. Wiebke Lamer</p>
             <p class="margin_bottom_20">Dr. Wiebke Lamer is the <span class="maiuscoletto">EMA</span> Fellow specialising in International Relations. In this role, she liaises with <span class="maiuscoletto">EMA</span> students and professors, and teaches the International Relations Rolling Seminar. She also lectures on the topic of media and democracy and conducts academic skills and thesis proposal workshops.</p>
             <div class="text_read_more">
@@ -29,7 +29,7 @@
     </div>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/chiara_altafin.jpg" alt="Dr. Chiara Altafin - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe"><span class="maiuscoletto">EMA</span> Fellow</p>
+            <p class="ruolo_persona titolo_gc_europe">Senior Researcher</p>
             <p class="subtitle_page_programme margin_bottom_20">Dr. Chiara Altafin</p>
             <p class="margin_bottom_20">Dr. Chiara Altafin is the <span class="maiuscoletto">EMA</span> Fellow specialising in International Law. In this role, she liaises with EMA professors and students, and teaches the International Law Rolling Seminar. She also lectures on topics related to human rights, International and European law, and conducts academic skills and thesis proposal workshops as well as skill-building seminars.</p>
             <div class="text_read_more">
