--- a/website/etc/megamenu.html
+++ b/website/etc/megamenu.html
@@ -98,7 +98,7 @@
                 </ul>
             </div>
             <div class="colonna_menu">
-                <h5 class="title_colonna_menu"><a href="{{link_url::13}}">Focused Training & Capacity Building</a></h5>
+                <h5 class="title_colonna_menu"><a href="{{link_url::13}}">Capacity Building<br>& Training Programmes</a></h5>
                 <ul>
                     <li>
                         <a href="{{link_url::48}}">Summer Schools</a>
