--- a/website/etc/menumobile.html
+++ b/website/etc/menumobile.html
@@ -115,7 +115,7 @@
                                 <a class="next_level" href="#">
                                     <img src="files/eiuc/freccia-dx.svg" alt="freccia destra">
                                 </a>
-                                <a class="order1" href="{{link_url::13}}">Focused Training & Capacity Buildings</a>
+                                <a class="order1" href="{{link_url::13}}">Capacity Building & Training Programmes </a>
                                 <div class="mp-level">
                                     <h2>Summer Schools and Training Seminars</h2>
                                     <a class="mp-back" href="#">Back to menu</a>
