fixed againa Altafin's title

--- a/website/04-About-us/Staff/Headquarters/11-gceuroope.html
+++ b/website/04-About-us/Staff/Headquarters/11-gceuroope.html
@@ -29,7 +29,7 @@
     </div>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/chiara_altafin.jpg" alt="Dr. Chiara Altafin - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Senior Researcher</p>
+            <p class="ruolo_persona titolo_gc_europe">Resarch Manager/Senior Researcher</p>
             <p class="subtitle_page_programme margin_bottom_20">Dr. Chiara Altafin</p>
             <p class="margin_bottom_20">Dr. Chiara Altafin is the <span class="maiuscoletto">EMA</span> Fellow specialising in International Law. In this role, she liaises with EMA professors and students, and teaches the International Law Rolling Seminar. She also lectures on topics related to human rights, International and European law, and conducts academic skills and thesis proposal workshops as well as skill-building seminars.</p>
             <div class="text_read_more">
