--- a/website/01-Home/wide-hook.html
+++ b/website/01-Home/wide-hook.html
@@ -18,6 +18,6 @@
         	<br>
         	<br>
         	The completion date of the 23-month project is November 2020.</p>
-        <p style="margin-top: -7px;"><a href="education/focused-training-capacity-building/capacity-building-at-untl/about.html"> <button class="button button--aylen button_asia button--aylen_asia no_margin_bottom">Discover More</button> </a></p>
+        <p style="margin-top: -7px;"><a href="{{link_url::478}}"> <button class="button button--aylen button_asia button--aylen_asia no_margin_bottom">Discover More</button> </a></p>
     </div>
 </div>
