--- a/website/etc/megamenu.html
+++ b/website/etc/megamenu.html
@@ -107,7 +107,7 @@
                         <a href="{{link_url::49}}">Training Seminars</a>
                     </li>
                     <li>
-                        <a href="{{link_url::478}}">Human Rights Centre<br>at the UNTL</a>
+                        <a href="{{link_url::478}}">Human Rights Centre<br>at UNTL</a>
                     </li>
                 </ul>
             </div>
