--- a/website/etc/menumobile.html
+++ b/website/etc/menumobile.html
@@ -122,7 +122,7 @@
                                     <ul>
                                         <li><a href="{{link_url::48}}">Summer Schools</a></li>
                                         <li><a href="{{link_url::49}}">Training Seminars</a></li>
-                                        <li><a href="{{link_url::478}}">Human Rights Centre<br>at the UNTL</a></li>
+                                        <li><a href="{{link_url::478}}">Human Rights Centre<br>at UNTL</a></li>
                                     </ul>
                                 </div>
                             </li>
