Outline initial draft

--- a/website/02-Education/HRC-UNTL/05-outline.html
+++ b/website/02-Education/HRC-UNTL/05-outline.html
@@ -296,7 +296,7 @@ li span {
         </div>
     </li>
 </ul>
-<ul class="timeline opaque">
+<ul class="timeline">
     <li>
         <div class="timeline-badge second2"><i class="fas fa-user-graduate"></i></div>
         <div class="timeline-panel">
@@ -346,8 +346,8 @@ li span {
         </div>
     </li>
 </ul>
-<h3 id="timeline" style="opacity: 0.7;">2020</h3>
-<ul class="timeline opaque">
+<h3 id="timeline">2020</h3>
+<ul class="timeline">
     <li>
         <div class="timeline-badge second2"><i class="fas fa-users"></i></div>
         <div class="timeline-panel">
@@ -407,6 +407,8 @@ li span {
             </div>
         </div>
     </li>
+  </ul>
+  <ul class="timeline opaque">
     <li class="timeline-inverted">
         <div class="timeline-badge second2"><i class="fas fa-users"></i></div>
         <div class="timeline-panel">
