--- a/website/02-Education/HRC-UNTL/05-outline.html
+++ b/website/02-Education/HRC-UNTL/05-outline.html
@@ -484,3 +484,5 @@ li span {
         </div>
     </li>
 </ul>
+<p class="margin_bottom_20">&nbsp</p>
+<p><em>*due to the COVID-19 outbreak the project timeline might be subject to variations</em></p>
