partners fixes and initial draft

--- a/website/02-Education/HRC-UNTL/02-partners-part2.html
+++ b/website/02-Education/HRC-UNTL/02-partners-part2.html
@@ -1,4 +1,4 @@
-<p class="subtitle_page_programme">Delegation of the EU to Timor-Leste (EUDEL) </p>
+<p class="subtitle_page_programme margin_bottom_20">Delegation of the EU to Timor-Leste (EUDEL) </p>
 <div class="bandiera_e_testo show"><img class="bandiera_europa" src="files/eiuc/bandiera_europa.jpg" alt="European Union Logo" height="110px">
     <p class="margin_bottom_20">The project is implemented in close cooperation with the EU Delegation in Dili and especially the Ambassador/Head of Mission, the DEVCO and the Communication Offices.
         <br>
