--- a/website/02-Education/HRC-UNTL/02-partners-part3.html
+++ b/website/02-Education/HRC-UNTL/02-partners-part3.html
@@ -1,10 +1,13 @@
 <!-- description_page_programme_no_border -->
+<p class="margin_bottom_20">Website: <a href="https://op.mahidol.ac.th/ihrp/en/" class="titolo_gc_asia_pacific" target="_blank">https://op.mahidol.ac.th/ihrp/en/</a></p>
+
 <div class="table_accordion">
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/euconvince/etuce.jpg" alt="ETUCE">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/partners/untl.jpg" alt="National University of Timor-Leste (UNTL)">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="subtitle_page_programme margin_bottom_20">European Trade Union Committee for Education (ETUCE)</p>
-            <p class="margin_bottom_20">The European Trade Union Committee for Education (ETUCE) represents 132 education unions and 11 million teachers from all levels of the education sectors in 50 countries of Europe. ETUCE is a Social Partner in education at European level and a defender of teachers' interests to the European Commission. It was established in 1977.</p>
-            <p class="margin_bottom_20">ETUCE is the European Region of Education International, the global federation of education unions, and a European Trade Union Federation within ETUC, the European Trade Union Confederation.</p>
+            <p class="subtitle_page_programme margin_bottom_20">National University of Timor-Leste (UNTL)</p>
+            <p class="margin_bottom_20">Since the UNTL is the final beneficiary institution, all main aspects of the project are coordinated with the UNTL Rector and his Cabinet, as well as with the Deans of the Faculties involved, especially the Faculty of Social Sciences which houses the Human Rights Centre.</p>
+            <p class="margin_bottom_20">Website: <a href="http://untl.edu.tl/pt/" class="titolo_gc_asia_pacific" target="_blank">http://untl.edu.tl/pt/</a></p>
+            <!-- 
             <div class="text_read_more">
                 <p class="margin_bottom_20">Following the new structure, ETUCE represents 132 Education Trade unions in 51 countries. In total numbers, ETUCE represents 11 million members all over Europe.</p>
             </div>
@@ -16,35 +19,19 @@
                     </div>
                     <p class="title_accordion more_less">Read More</p>
                 </div>
-            </div>
+            </div> 
+        	-->
         </div>
     </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/euconvince/efee.jpg" alt="EFEE">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/partners/mahidol.jpg" alt="Mahidol University (MU)">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="subtitle_page_programme margin_bottom_20">European Federation of Education Employers (EFEE)</p>
-            <p class="margin_bottom_20">The European Federation of Education Employers (EFEE) is a dynamic organisation established in 2009 to represent the interests of employers in the strategic and highly diverse European education sector.</p>
-            <p class="margin_bottom_20">It represents education employers in all levels of education, from pre-school to higher education and research. This includes different national organisations, such as education councils and ministries of education, associations of VET colleges and universities and local and regional authority employers’ organisations.</p>
+            <p class="subtitle_page_programme margin_bottom_20">Mahidol University (MU)</p>
+            <p class="margin_bottom_20">All academic aspects of capacity-building are conceptualized and developed thanks to the expert support of the Institute of Human Rights and Peace (IHRP) of Mahidol University in Bangkok, home to the Global Campus Asia-Pacific Programme. IHRP lecturers are involved in teaching and tutoring students and trainees, as well as supporting internationalization of the new HRC and facilitating its introduction to the main regional human rights education networks.  </p>
+            <p class="margin_bottom_20">Website: <a href="https://op.mahidol.ac.th/ihrp/en/" class="titolo_gc_asia_pacific" target="_blank">https://op.mahidol.ac.th/ihrp/en/</a></p>
+
+            <!-- 
             <div class="text_read_more">
-                <p class="margin_bottom_20">EFEE acts on behalf of its members in its role as officially recognised European social partner in education and as an official dialogue partner to EU institutions.</p>
-            </div>
-            <div class="accordion accordion_gc_south_europe read_more">
-                <div class="icon_e_title_accordion">
-                    <div class="piu_accordion">
-                        <div class="verticale">[nbsp]</div>
-                        <div class="orizzontale">[nbsp]</div>
-                    </div>
-                    <p class="title_accordion more_less">Read More</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/euconvince/esha.jpg" alt="ESHA">
-        <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="subtitle_page_programme margin_bottom_20">European School Heads Association (ESHA)</p>
-            <p class="margin_bottom_20">ESHA, the European School Heads Association, is a professional organization for European School Heads. Members of ESHA are national organisations for school heads and deputy school heads within (pre-) primary, secondary and vocational education.</p>
-            <p class="margin_bottom_20">ESHA is an international community in which experiences, visions and views between members are exchanged and in which new ideas are born. ESHA connects school leaders, researchers and policy makers with the collective aim to learn from each other and improve education.</p>
-            <div class="text_read_more">
-                <p class="margin_bottom_20">Nearly all European countries (both EU and non-EU) are represented within ESHA by one or more organisations.</p>
+                <p class="margin_bottom_20">Following the new structure, ETUCE represents 132 Education Trade unions in 51 countries. In total numbers, ETUCE represents 11 million members all over Europe.</p>
             </div>
             <div class="accordion accordion_gc_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -54,16 +41,19 @@
                     </div>
                     <p class="title_accordion more_less">Read More</p>
                 </div>
-            </div>
+            </div> 
+        	-->
         </div>
     </div>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/euconvince/erasmus.jpg" alt="EUROPEAN COMMISSION">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/partners/pdhj.jpg" alt="Provedoria for Human Rights and Justice (PDHJ)">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="subtitle_page_programme margin_bottom_20">Directorate General Education, Youth, Sport and Culture (DG EAC)</p>
-            <p class="margin_bottom_20">This Commission department is responsible for EU policy on education, culture, youth, languages and sport. EU CONVINCE is co-funded by the Erasmus+ programme of DG EAC.</p>
-            <p class="margin_bottom_20">Erasmus+ is the EU's programme to support education, training, youth and sport in Europe. It provides opportunities for over 4 million Europeans to study, train, and gain experience abroad.</p>
+            <p class="subtitle_page_programme margin_bottom_20">Provedoria for Human Rights and Justice (PDHJ)</p>
+            <p class="margin_bottom_20">The Provedoria, as the main national human rights institution, is a crucial local actor. Their expertise makes a vital contribution to incorporating the Timorese experience in struggles for human rights and democratization into the training programmes and for curriculum development. </p>
+            <p class="margin_bottom_20">Website: <a href="http://pdhj.tl/?lang=en" class="titolo_gc_asia_pacific" target="_blank">http://pdhj.tl/?lang=en</a></p>
+
+            <!-- 
             <div class="text_read_more">
-                <p class="margin_bottom_20">Set to last until 2020, Erasmus+ doesn't just have opportunities for students. Merging seven prior programmes, it has opportunities for a wide variety of individuals and organisations.</p>
+                <p class="margin_bottom_20">Following the new structure, ETUCE represents 132 Education Trade unions in 51 countries. In total numbers, ETUCE represents 11 million members all over Europe.</p>
             </div>
             <div class="accordion accordion_gc_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -73,7 +63,52 @@
                     </div>
                     <p class="title_accordion more_less">Read More</p>
                 </div>
+            </div> 
+        	-->
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/partners/cnc.jpg" alt="Centro Nacional Chega! (CNC)">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="subtitle_page_programme margin_bottom_20">Centro Nacional Chega! (CNC)</p>
+            <p class="margin_bottom_20">The  Centro Nacional Chega, as the national centre for dealing with the past, is a crucial local actor. Their expertise makes a vital contribution to incorporating the Timorese experience in struggles for human rights and democratization into the training programmes and for curriculum development. </p>
+            <p class="margin_bottom_20">Website: <a href="https://www.centrochega.tl/en" class="titolo_gc_asia_pacific" target="_blank">https://www.centrochega.tl/en</a></p>
+
+            <!-- 
+            <div class="text_read_more">
+                <p class="margin_bottom_20">Following the new structure, ETUCE represents 132 Education Trade unions in 51 countries. In total numbers, ETUCE represents 11 million members all over Europe.</p>
             </div>
+            <div class="accordion accordion_gc_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div> 
+        	-->
+        </div>
+    </div>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/hrc/partners/un.jpg" alt="United Nations in Timor-Leste ">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="subtitle_page_programme margin_bottom_20">United Nations in Timor-Leste</p>
+            <p class="margin_bottom_20">The UN system in Timor-Leste, including the Resident Coordinator Office and the Agencies, has strongly supported the project from its very inception. Their help is critical to further improve the implementation process, facilitate linkages with domestic and foreign stakeholders and support the organization of local events and future development of the Human Rights Centre.</p>
+            <p class="margin_bottom_20">Website: <a href="https://www.un.org.tl/en/" class="titolo_gc_asia_pacific" target="_blank">https://www.un.org.tl/en/</a></p>
+
+            <!-- 
+            <div class="text_read_more">
+                <p class="margin_bottom_20">Following the new structure, ETUCE represents 132 Education Trade unions in 51 countries. In total numbers, ETUCE represents 11 million members all over Europe.</p>
+            </div>
+            <div class="accordion accordion_gc_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div> 
+        	-->
         </div>
     </div>
 </div>
