cleanup code people

--- a/website/02-Education/HRC-UNTL/07-People-part2.html
+++ b/website/02-Education/HRC-UNTL/07-People-part2.html
@@ -71,23 +71,12 @@
     </div>
     <div class="text_accordion">
         <ul class="margin_bottom_20">
-            <li>Josè Lopes - Officer at the National Police of Timor Leste</li>
-            <li>Maria Agnes Bere - Owner of Jurídico Social Consultoria</li>
-            <li>Maria Rosa Xavier - Human rights advisor at Ministry of Justice</li>
-            <li>Juvita Pereira Faria - Youth advocate and activist, director of Education Consultation Service</li>
-            <li>Celso de Fonseca - Social entrepreneur, and program organizer of community development</li>
-            <li>Joanico Gusmao Alves - Youth advocate and consultant, co-founder of Institute of Education Timor Leste</li>
+			<li>Regina Seuc Seran das Dores - Graduating student, Department of Social Communication, Faculty of Social Science</li>
+			<li>Inocencio de Jesus Xavier - Alumnus, Department of Public Policy, Faculty of Social Science</li>
+			<li>Roli de Jesus Guterres Freitas Belo - Graduating student, Department of International Relations, Faculty of Social Science</li>
+			<li>Esperança Martins Carvalho - Graduating student, Department of Political Science, Faculty of Social Science</li>
+			<li>Francelino dos Santos Serra - Graduating student, Department of Community Development, Faculty of Social Science</li>
+			<li>Celeste Agrita Gutterres - Alumna, Department of Science of Public Administration, Faculty of Social Science</li>
         </ul>
     </div>
 </div>
-<!--
-<p class="subtitle_page_programme">GROUP 1 - Human Rights Defenders</p>
-<p class="margin_bottom_20">Josè Lopes - Officer at the National Police of Timor Leste</p>
-<p class="margin_bottom_20">Maria Agnes Bere - Owner of Jurídico Social Consultoria</p>
-<p class="margin_bottom_20">Maria Rosa Xavier - Human rights advisor at Ministry of Justice</p>
-<p class="margin_bottom_20">Juvita Pereira Faria - Youth advocate and activist, director of Education Consultation Service</p>
-<p class="margin_bottom_20">Celso de Fonseca - Social entrepreneur, and program organizer of community development</p>
-<p class="margin_bottom_20">Joanico Gusmao Alves - Youth advocate and consultant, co-founder of Institute of Education Timor Leste</p>
--->
-<!-- Fare accordion rosa 2-->
-<!-- Fare accordion rosa 3-->
