fixes to people and minor .htaccess tweak

--- a/website/02-Education/HRC-UNTL/07-People-part2.html
+++ b/website/02-Education/HRC-UNTL/07-People-part2.html
@@ -17,10 +17,10 @@
 <div class="accordion margin_bottom_10 accordion_gc_asia">
     <div class="icon_e_title_accordion">
         <div class="piu_accordion">
-            <div class="verticale">&nbsp;</div>
-            <div class="orizzontale">&nbsp;</div>
+            <div class="verticale">[nbsp]</div>
+            <div class="orizzontale">[nbsp]</div>
         </div>
-        <p class="title_accordion titolo_gc_asia_pacific">GROUP 1 - Human Rights Defenders</p>
+        <p class="title_accordion titolo_gc_asia_pacific">Group 1 - Human Rights Defenders</p>
     </div>
     <div class="text_accordion">
         <ul class="margin_bottom_20">
@@ -36,8 +36,8 @@
 <div class="accordion margin_bottom_10 accordion_gc_asia">
     <div class="icon_e_title_accordion">
         <div class="piu_accordion">
-            <div class="verticale">&nbsp;</div>
-            <div class="orizzontale">&nbsp;</div>
+            <div class="verticale">[nbsp]</div>
+            <div class="orizzontale">[nbsp]</div>
         </div>
         <p class="title_accordion titolo_gc_asia_pacific">Group 2 - UNTL Professors</p>
     </div>
@@ -64,8 +64,8 @@
 <div class="accordion accordion_gc_asia">
     <div class="icon_e_title_accordion">
         <div class="piu_accordion">
-            <div class="verticale">&nbsp;</div>
-            <div class="orizzontale">&nbsp;</div>
+            <div class="verticale">[nbsp]</div>
+            <div class="orizzontale">[nbsp]</div>
         </div>
         <p class="title_accordion titolo_gc_asia_pacific">Group 3 - 6 Graduating Students & Alumni</p>
     </div>
