Media-Toolkit initial release

--- a/website/02-Education/HRC-UNTL/08-Media-Toolkit.html
+++ b/website/02-Education/HRC-UNTL/08-Media-Toolkit.html
@@ -31,7 +31,7 @@
         <div class="table_accordion_cell">
             <div class="accordion accordion_gc">
                 <div class="icon_e_title_accordion">
-                    <p class="title_accordion">Students Interviews - Group 1 - Human Rights Defenders</p>
+                    <p class="title_accordion">Human Rights Defenders (Group 1)</p>
                     <p class="number_universities">[nbsp]</p>
                     <div class="piu_accordion">
                         <div class="verticale">[nbsp]</div>
@@ -45,7 +45,7 @@
         <div class="table_accordion_cell">
             <div class="accordion accordion_gc">
                 <div class="icon_e_title_accordion">
-                    <p class="title_accordion">Statements</p>
+                    <p class="title_accordion">Testimonials</p>
                     <p class="number_universities">[nbsp]</p>
                     <div class="piu_accordion">
                         <div class="verticale">[nbsp]</div>
