hooks initial commits

--- a/website/05-Support-us/hooks-part1.html
+++ b/website/05-Support-us/hooks-part1.html
@@ -3,7 +3,7 @@
         <div class="recensione">
             <div class="text_recensione">
                 <h3 class="title_box_about_us"><a href="{{link_url::243}}">Donations</a></h3>
-                <p>You could choose the way that best suits you among the general, particular and the legacy in memoriam of your loved one.</p>
+                <p>Choose what best suits you: a general or specific donation, a legacy or gift in memoriam of your loved one.</p>
                 <a class="freccia_dx" href="{{link_url::243}}"> <img src="files/eiuc/freccia-dx.svg" alt="freccia destra"> </a>
             </div>
             <img class="img_recensione" src="files/eiuc/img_donation.jpg" alt="donation">
@@ -11,7 +11,7 @@
         <div class="recensione"><img class="img_recensione" src="files/eiuc/img_membership.jpg" alt="Membership">
             <div class="text_recensione">
                 <h3 class="title_box_about_us"><a href="news-events/fundraising-events.html">Fundrasing Events</a></h3>
-                <p>You will find here the list of our next fundraising events such as concerts, cultural events, sportive competitions and other initiatives.</p>
+                <p>Find the list of our upcoming fundraising events such as concerts, cultural events, sports competitions and other initiatives.</p>
                 <a class="freccia_dx" href="news-events/fundraising-events.html"> <img src="files/eiuc/freccia-dx.svg" alt="freccia destra"> </a>
             </div>
         </div>
@@ -20,7 +20,7 @@
         <div class="recensione">
             <div class="text_recensione">
                 <h3 class="title_box_about_us"><a href="{{link_url::22}}">Sponsorships</a></h3>
-                <p>You could build with us communities devoted to support the implementation of the Sustainable Development Goals (SDGs) worldwide.</p>
+                <p>Build communities with us to support the implementation of the Sustainable Development Goals (SDGs) worldwide.</p>
                 <a class="freccia_dx" href="{{link_url::22}}"> <img src="files/eiuc/freccia-dx.svg" alt="freccia destra"> </a>
             </div>
             <img class="img_recensione" src="files/eiuc/img_partnership.jpg" alt="Partnership [&amp;] Sponsorship">
