--- a/website/01-Home/wide-hook.html
+++ b/website/01-Home/wide-hook.html
@@ -8,7 +8,7 @@
     </div>
     <div class="ce_text lancio_wide_text last block show">
         <h3 class="margin_bottom_15">Capacity Building in Timor-Leste</h3>
-        <p>In 2019 the Global Campus of Human Rights was entrusted by the <strong>European Commission</strong> to lead the new project “<strong>Development of Human Rights Education and Research at the National University of Timor-Leste</strong>” aimed at establishing a Human Rights Centre in Dili.
+        <p>In 2019 the Global Campus of Human Rights was entrusted by the European Union to lead the new project “<strong>Development of Human Rights Education and Research at the National University of Timor-Leste</strong>” aimed at establishing a Human Rights Centre in Dili.
         	<br>
         	<br>
         	The goal of the Human Rights Centre is to engage in training, international networking and research activities.
