--- a/website/02-Education/HRC-UNTL/08-Media-Toolkit.html
+++ b/website/02-Education/HRC-UNTL/08-Media-Toolkit.html
@@ -14,7 +14,7 @@
 		<div class="table_accordion_cell">
 		    <div class="accordion accordion_gc">
 		        <div class="icon_e_title_accordion">
-		            <p class="title_accordion">What is the project?</p>
+		            <p class="title_accordion">Project video-animation</p>
 		            <p class="number_universities">[nbsp]</p>
 		            <div class="piu_accordion">
 		                <div class="verticale">[nbsp]</div>
