added photogallery outreach and small fixes to contact-us

--- a/website/02-Education/HRC-UNTL/09-contact-us-part1.html
+++ b/website/02-Education/HRC-UNTL/09-contact-us-part1.html
@@ -1,6 +1,6 @@
 <p class="subtitle_page_programme">Development of Human Rights Education and Research at the National University of Timor-Leste (UNTL)</p>
 
-<p class="margin_bottom_20"><strong>Office at:</strong><br>Human Rights Cener<br>Faculty of Social Science<br>Universidade Nacional Timor Lorosa'e<br>Díli, Timor-Leste</p>
+<p class="margin_bottom_20"><strong>Office at:</strong><br>Human Rights Centre<br>Faculty of Social Science<br>National University of Timor-Leste<br>Díli, Timor-Leste</p>
 <p>Website: <a class="titolo_gc_asia_pacific" href="//www.gchumanrights.org/hrc-untl">www.gchumanrights.org/hrc-untl</a></p>
 <p>Facebook: <a class="titolo_gc_asia_pacific" href="https://www.facebook.com/UNTL.HumanRightsCentre" target="_blank">@UNTL.HumanRightsCentre</a>
 <p>Email: <a class="titolo_gc_asia_pacific" href="mailto:hrc-untl@gchumanrights.org">hrc-untl@gchumanrights.org</a></p>
