--- a/website/05-Support-us/JOIN-US/intro-hooks.html
+++ b/website/05-Support-us/JOIN-US/intro-hooks.html
@@ -3,14 +3,14 @@
         <div class="recensione"><img class="img_recensione" src="files/eiuc/donations.jpg" alt="donations">
             <div class="text_recensione">
                 <h3 class="title_box_about_us"><a href="{{link_url::243}}">Donations</a></h3>
-                <p>Donations allows you to support directly our institution. You could choose the way that best suits you among the general, particular (destined to scholarships, internships or fellowships) and the legacy in memoriam of your loved one.</p>
+                <p>Donations allow you to directly support the Global Campus. Choose the way that best suits you: a general donation; a specific one to support scholarships, internships or fellowships; a legacy or gift in memoriam of your loved one.</p>
                 <a class="freccia_dx" href="{{link_url::243}}"><img src="files/eiuc/freccia-dx.svg" alt="freccia destra"></a>
             </div>
         </div>
         <div class="recensione">
             <div class="text_recensione">
                 <h3 class="title_box_about_us"><a href="{{link_url::245}}">Sponsorships</a></h3>
-                <p>Our Sponsorships [&amp;] Partnerships programmes are oriented to provide global engagement in order to build communities devoted to support the implementation of the Sustainable Development Goals (SDGs) worldwide. They are of different types suited to establish a long lasting cooperation between institutions.</p>
+                <p>Our Sponsorships & Partnerships Programme provide global engagement to build communities involved in implementing the Sustainable Development Goals (SDGs) worldwide. We offer different types of initiatives whose goal is to establish long lasting cooperation between institutions.</p>
                 <a class="freccia_dx" href="{{link_url::245}}"><img src="files/eiuc/freccia-dx.svg" alt="freccia destra"></a>
             </div>
             <img class="img_recensione" src="files/eiuc/membership_sponsorship.jpg" alt=" moocs" width="680" height="340">
