--- a/website/05-Support-us/JOIN-US/Donations/donations-intro.html
+++ b/website/05-Support-us/JOIN-US/Donations/donations-intro.html
@@ -1,2 +1,2 @@
-<p>Our students and academic communities are building the future of our society and you could support us giving what you would like to our projects, and your gift can truly make the difference to many lives.</p>
-<p>You could choose the way that best suits you among the general, particular and the legacy in memoriam of your loved one.</p>
+<p>Our students and academic communities are building the future of our society – a fairer one based on human rights and democratisation.  </p>
+<p>Your gift will make a true difference in successfully developing our global education activities and projects. </p>
